--- a/site/index.html
+++ b/site/index.html
@@ -1,13 +1,14 @@
 ---
-layout: page
+layout: page-big-header
 title: Smart Mirror
-description: "Soon with more information about scenarios"
+description: "Improving your life while you look at your mirror"
 
-header-image: false
+header-image: true
+header-path: "images/home.jpg"
 
 button: true
-button-ref: "/"
-button-description: "Home Page"
+button-ref: "/scenarios.html"
+button-description: "Learn More"
 toc: false
 ---
 
