--- a/site/status.html
+++ b/site/status.html
@@ -46,7 +46,7 @@ toc: false
         </thead>
         
         <tbody>
-            {% for deployment in site.data.for_developers %}
+            {% for deployment in site.data.status %}
             <tr>
                 <th scope="row">{{ deployment.category }}</th>
                 <td>{{ deployment.title }} </td>
