Prepared site structure for M5

--- a/site/team.html
+++ b/site/team.html
@@ -10,11 +10,20 @@ button: true
 button-ref: https://docs.google.com/spreadsheets/d/1-anmC7JUMqvxo18BQaN6GM0xpGJOnRGWG8OXHS1Q1Bg/edit?usp=sharing 
 button-description: Timesheet
 
-toc: false
+toc: true
 ---
 
+<div id="conclusions" style="text-align: center;">
+    <div class="title"  >
+        <h2>Our conclusions and key takeaways</h2>
+    </div>
+    <br>
+    TBA
+</div>
+
+
 <div id="team">
-    <div class="title"  style="text-align: center;">
+    <div class="title" style="text-align: center;">
         <h2>Team</h2>
     </div>
     <br>
@@ -32,7 +41,3 @@ toc: false
     </div>
 </div>
     
-    
-</div>
-
-
