Improved home page

--- a/site/tests.html
+++ b/site/tests.html
@@ -2,7 +2,7 @@
 layout: page
 title: Testing
 description: "How we assess our system works"
-button: true
+button: false
 button-ref: "/assets/docs/QA.pdf"
 button-description: "QA Report + Risk Assessment"
 header-image: true
