Developer and Operations Perspective. Final Considerations

--- a/site/team.html
+++ b/site/team.html
@@ -18,7 +18,11 @@ toc: true
         <h2>Our conclusions and key takeaways</h2>
     </div>
     <br>
-    TBA
+    <h3>Difficulties and issues</h3>
+    Limitations with hardware constraints, in particular usage of memory and storage, that meant a limited version of the detection of emotions (only capable of detecting 2 emotions) was implemented.
+    <h3>Future improvements</h3>
+    For the future, <b>finishing the implementation of all scenarios</b> would be the first priority. Aftwards, it would be very interesting to improve usability of the Smart Mirror by <b>adding a dashboard-like user interface</b> with information useful for the user such as weather, daily appointments, etc.<br> Also, and as a very useful improvement, the data provided by the system and currently available in the Doctors App on the emotions could be used to <b>infer future emotions for each user</b> (using machine-learning algorithms, for example). <br><br>
+    On a more technical note, the expansion of the coverage of the integration tests and the addition of unit tests for at least the most critical blocks of our system (such as the Python module responsible for the analysis of the emotion) would be essential for ensuring a more robust system.
 </div>
 
 
