--- a/site/tests.html
+++ b/site/tests.html
@@ -6,7 +6,7 @@ button: false
 button-ref: "/assets/docs/QA.pdf"
 button-description: "QA Report + Risk Assessment"
 header-image: true
-header-path: "images/developers.jpg"
+header-path: "images/tests.jpg"
 toc: true
 ---
 
