Home, Getting Started and Part of Tests

--- a/site/index.html
+++ b/site/index.html
@@ -7,37 +7,8 @@ header-image: true
 header-path: "images/home.jpg"
 
 button: true
-button-ref: "#intro"
+button-ref: "/getting-started.html"
 button-description: "Learn More"
 toc: false
 ---
 
-<!-- What are we trying to solve -->
-<div id="what" style="text-align: center" >
-    <div class="title" style="text-align: center">
-    <h2 id="intro"> </h2>
-    <h2>SmartMirror? What's that all about?</h2>
-    </div>
-
-    <h3 style="text-align: left">TBA</h3>
-
-    <a class="btn btn-round btn-lg btn-warning" href="{{site.baseurl}}/getting-started.html"><i class="material-icons">explore</i> Learn More</a>
-</div>
-
-<br>
-
-<div class="section" id="carousel">
-    <div id="what" style="text-align: center" >
-        <div class="title" style="text-align: center">
-        <h2 id="intro"> </h2>
-        <h2>Demo</h2>
-        <h3>Video preview of our current system</h3>
-    </div>
-    <div class="container">
-        <video controls style="max-width:100%;
-        max-height:100%;">
-            <source src="{{site.assets}}/demo.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-    </div>
-</div>
