--- a/site/operators.html
+++ b/site/operators.html
@@ -103,11 +103,11 @@ header-path: "images/operations.jpg"
     <h2>Monitoring</h2>
     </div>
 
-    <img class="center" src="{{site.assets}}/images/monitoring-example.png" alt="Example of monitoring data that can be visualized on Kibana" style="max-width:100%;
+   <!--  <img class="center" src="{{site.assets}}/images/monitoring-example.png" alt="Example of monitoring data that can be visualized on Kibana" style="max-width:100%;
     max-height:100%;"></img>
     <p class="text-muted" style="text-align: center">
         Example of monitoring data that can be visualized on Kibana
-    </p>
+    </p> -->
 
     The monitoring is done using the ELK stack (<i>Elasticsearch Logstash Kibana</i>).<br><br>
     
