Finished testing page

--- a/site/architecture.html
+++ b/site/architecture.html
@@ -6,7 +6,7 @@ button: false
 button-ref: None
 button-description: None
 header-image: true
-header-path: "images/developers.jpg"
+header-path: "images/architecture.jpg"
 ---
 
 <div id="diagram">
