Added Architecture Diagram

--- a/site/architecture.html
+++ b/site/architecture.html
@@ -21,21 +21,18 @@ header-path: "images/architecture.jpg"
     </p>
 </div>
 
-<div id="details">
+<!-- <div id="details">
     <div class="title">
         <h2>Implementation</h2>
         <h4>The described technologies are the <b>currently used</b> technologies for each block of our system</h4>
     </div>
 
-    <!--Table-->
     <table id="tablePreview" class="table" style="table-layout:fixed">
-        <!--Table head-->
         <thead>
         <tr>
             <th>Category</th>
             <th>Component</th>
             <th>Techonologies/Devices</th>
-            <th>Purpose</th>
         </tr>
         </thead>
         
@@ -45,13 +42,12 @@ header-path: "images/architecture.jpg"
                 <th scope="row">{{ implementation.category }}</th>
                 <td>{{ implementation.title }} </td>
                 <td>{{ implementation.tech }} </td>
-                <td>{{ implementation.purpose}} </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     
-</div>
+</div> -->
 
 <div id="details">
     <div class="title">
