--- a/site/team.html
+++ b/site/team.html
@@ -6,8 +6,8 @@ description: ""
 header-image: true
 header-path: "images/team/"
 
-button: true
-button-ref: https://docs.google.com/spreadsheets/d/1-anmC7JUMqvxo18BQaN6GM0xpGJOnRGWG8OXHS1Q1Bg/edit?usp=sharing 
+button2: true
+button-ref2: https://docs.google.com/spreadsheets/d/1-anmC7JUMqvxo18BQaN6GM0xpGJOnRGWG8OXHS1Q1Bg/edit?usp=sharing 
 button-description: Timesheet
 
 toc: true
